Add Battery Support (Enphase) Upgrade to Spring Boot 3.5.14 Upgrade Jars Upgrade H2 database to 2.3 and add scripts to upgrade in Dockerfile Support latest Enphase Firmware with HTTPS everywhere